# basketball-tracker_masters_thesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hub.ipynb
Documents/NTNU/Masteroppgave/basketball-tracker_masters_thesis/: CMakeLists.txt
Documents/NTNU/Masteroppgave/basketball-tracker_masters_thesis/src/: Detector.cpp  Tracker.cpp  main.cpp
Documents/NTNU/Masteroppgave/basketball-tracker_masters_thesis/src/include/: Detector.h  Tracker.h
model/: data.yaml
src/: Detector.cpp  Detector.cpp.backup  MotorController.cpp  main.cpp
src/include/: Detector.h  MotorController.h
